--- a/snakemake_tutorial/Snakefile
+++ b/snakemake_tutorial/Snakefile
@@ -1,8 +1,8 @@
-rule bwa_map:
+rule b_map:
     input:
         "data/genome.fa",
-	"data/samples/A.fastq"
+        "data/samples/{sample}.fastq"
     output:
-        "mapped_reads/A.bam"
+        "mapped_reads/{sample}.bam"
     shell:
-        "bwa mem {input} | samtools view -Sb - > {output}"
+        "bwa mem {input} | samtools view -Sb - > {output}"wa_map:
