--- a/snakemake_tutorial/Snakefile
+++ b/snakemake_tutorial/Snakefile
@@ -1,4 +1,12 @@
-rule b_map:
+samples = ['A', 'B', 'C']
+
+rule all:
+    input: 
+        expand("sorted_reads/{sample}.bam.bai",
+	       sample=samples)
+
+
+rule bwa_map:
     input:
         "data/genome.fa",
         "data/samples/{sample}.fastq"
@@ -6,3 +14,20 @@ rule b_map:
         "mapped_reads/{sample}.bam"
     shell:
         "bwa mem {input} | samtools view -Sb - > {output}"
+
+rule samtools_sort:
+    input:
+        "mapped_reads/{sample}.bam"
+    output:
+        "sorted_reads/{sample}.bam"
+    shell:
+        "samtools sort -T sorted_reads/{wildcards.sample} "
+        "-O bam {input} > {output}"
+
+rule samtools_index:
+    input:
+        "sorted_reads/{sample}.bam"
+    output:
+        "sorted_reads/{sample}.bam.bai"
+    shell:
+        "samtools index {input}"
